--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       var totalImagens = 0, carregadas = 0;
       var musicaAcao;
       
-      // Começa carregando as imagens e músicas
+      // Carregando as imagens e músicas
       carregarImagens();
       carregarMusicas();
       
